添加服务器重启自动启动

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,4 +57,6 @@ jobs:
           wget https://github.com/liuxiaojun666/realworld-nuxt/releases/latest/download/release.tgz -O release.tgz
           tar zxvf release.tgz
           npm install --production
+          pm2 unstartup systemd
           pm2 reload pm2.config.json
+          pm2 startup
