服务器开机自动重启pm2 服务

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,4 +59,5 @@ jobs:
           npm install --production
           pm2 unstartup systemd
           pm2 reload pm2.config.json
+          pm2 save
           pm2 startup
